--- a/charts/matrix-stack/templates/synapse/synapse_service.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_service.yaml
@@ -7,7 +7,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
 {{- range $processType := prepend (keys ((include "element-io.synapse.enabledWorkers" (dict "root" $)) | fromJson)) "main" }}
-{{- $perProcessRoot := merge (dict "ProcessType" $processType) $.Values.synapse }}
+{{- $perProcessRoot := merge (dict "processType" $processType "isHook" false) $.Values.synapse }}
 apiVersion: v1
 kind: Service
 metadata:
