--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount.yaml
@@ -4,25 +4,8 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with .Values.synapse -}}
-{{- if and .enabled .serviceAccount.create -}}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-{{- if or .serviceAccount.annotations .checkConfigHook.enabled }}
-  annotations:
-  {{- if .checkConfigHook.enabled }}
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation
-  {{- end }}
-  {{- with .serviceAccount.annotations }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
-  labels:
-    {{- include "element-io.init-secrets.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse")) }}
-  namespace: {{ $.Release.Namespace }}
-automountServiceAccountToken: false
-{{- end }}
+{{- with $.Values.synapse -}}
+{{- if .enabled -}}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse")) }}
+{{- end -}}
 {{- end -}}
