--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -8,7 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- if .enabled -}}
 {{- $enabledWorkers := (include "element-io.synapse.enabledWorkers" (dict "root" $)) | fromJson }}
 {{- range $processType, $unmergedProcessDetails := merge $enabledWorkers (dict "main" dict) }}
-{{- $perProcessRoot := merge (dict "ProcessType" $processType) $.Values.synapse }}
+{{- $perProcessRoot := merge (dict "processType" $processType "isHook" false) $.Values.synapse }}
 {{- with (merge dict ($unmergedProcessDetails | deepCopy) ($.Values.synapse | deepCopy)) }}
 apiVersion: apps/v1
 kind: StatefulSet
@@ -36,235 +36,7 @@ spec:
     type: RollingUpdate
   # Without this CrashLoopBackoffs due to config failures block pod recreation
   podManagementPolicy: Parallel
-  template:
-    metadata:
-      labels:
-        {{- include "element-io.synapse.process.labels" (dict "root" $ "context" $perProcessRoot) | nindent 8 }}
-        k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/synapse/synapse_secret.yaml") $ | sha1sum }}"
-        k8s.element.io/logconfighash: "{{ include (print $.Template.BasePath "/synapse/synapse_configmap.yaml") $ | sha1sum }}"
-{{- range $index, $appservice := .appservices }}
-        k8s.element.io/as-registration-{{ $index }}-hash: "{{ (lookup "v1" "ConfigMap" $.Release.Namespace $appservice.registrationFileConfigMap) | toJson | sha1sum }}"
-{{- end }}
-        {{ include "element-io.ess-library.postgres-label" (dict "root" $ "context" (dict
-                                                                "essPassword" "synapse"
-                                                                "postgresProperty" .postgres
-                                                                )
-                                            ) -}}
-{{- with .annotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-{{- end }}
-    spec:
-{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "synapse" "deployment" false "usesMatrixTools" true)) | nindent 6 }}
-{{- with .hostAliases }}
-      hostAliases:
-        {{- tpl (toYaml . | nindent 8) $ }}
-{{- end }}
-{{- /*
-We have an init container to render & merge the config for several reasons:
-* We have external, user-supplied Secrets and don't want to use `lookup` as that doesn't work with things like ArgoCD
-* We want to treat credentials provided in Helm the same as credentials in external Secrets
-* We want to guarantee the order the YAML files are merged and while we can code to Synapse's current behavour that may change
-* We could do this all in the main Synapse container but then there's potential confusion between `/config-templates`, `/conf` in the image and `/conf` the `emptyDir`
-*/}}
-      initContainers:
-      - name: render-config
-{{- with $.Values.matrixTools.image -}}
-{{- if .digest }}
-        image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
-        imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
-{{- else }}
-        image: "{{ .registry }}/{{ .repository }}:{{ required "matrixTools.image.tag is required if no digest" .tag }}"
-        imagePullPolicy: {{ .pullPolicy | default "Always" }}
-{{- end }}
-{{- end }}
-{{- with .containersSecurityContext }}
-        securityContext:
-          {{- toYaml . | nindent 10 }}
-{{- end }}
-        command:
-        - "/matrix-tools"
-        - render-config
-        - -output
-        - /conf/homeserver.yaml
-        - /config-templates/01-homeserver-underrides.yaml
-          {{- range $key := (.additional | keys | uniq | sortAlpha) -}}
-          {{- $prop := index $.Values.synapse.additional $key }}
-          {{- if $prop.config }}
-        - /secrets/{{ $.Release.Name }}-synapse/user-{{ $key }}
-          {{- end }}
-          {{- if $prop.configSecret }}
-        - /secrets/{{ tpl $prop.configSecret $ }}/{{ $prop.configSecretKey }}
-          {{- end }}
-          {{- end }}
-        - /config-templates/04-homeserver-overrides.yaml
-        - /config-templates/05-{{ $processType }}.yaml
-        env:
-          {{- include "element-io.synapse.matrixToolsEnv" (dict "root" $ "context" .) | nindent 10 }}
-          {{- include "element-io.synapse.env" (dict "root" $ "context" .) | nindent 10 }}
-{{- with .resources }}
-        resources:
-          {{- toYaml . | nindent 10 }}
-{{- end }}
-        volumeMounts:
-        - mountPath: /config-templates
-          name: plain-config
-          readOnly: true
-{{- range $secret := include "element-io.synapse.configSecrets" (dict "root" $ "context" .) | fromJsonArray }}
-        - mountPath: /secrets/{{ tpl $secret $ }}
-          name: "secret-{{ tpl $secret $ }}"
-          readOnly: true
-{{- end }}
-        - mountPath: /conf
-          name: rendered-config
-          readOnly: false
-      - name: db-wait
-{{- with $.Values.matrixTools.image -}}
-{{- if .digest }}
-        image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
-        imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
-{{- else }}
-        image: "{{ .registry }}/{{ .repository }}:{{ required "matrixTools.image.tag is required if no digest" .tag }}"
-        imagePullPolicy: {{ .pullPolicy | default "Always" }}
-{{- end }}
-{{- end }}
-{{- with .containersSecurityContext }}
-        securityContext:
-          {{- toYaml . | nindent 10 }}
-{{- end }}
-        command:
-        - "/matrix-tools"
-        - tcpwait
-        - -address
-        - {{ include "element-io.ess-library.postgres-host-port" (dict "root" $ "context" (dict "postgres" .postgres)) | quote }}
-{{- with .resources }}
-        resources:
-          {{- toYaml . | nindent 10 }}
-{{- end }}
-      containers:
-      - name: synapse
-{{- with .image -}}
-{{- if .digest }}
-        image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
-        imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
-{{- else }}
-        image: "{{ .registry }}/{{ .repository }}:{{ .tag }}"
-        imagePullPolicy: {{ .pullPolicy | default "Always" }}
-{{- end }}
-{{- end }}
-{{- with .containersSecurityContext }}
-        securityContext:
-          {{- toYaml . | nindent 10 }}
-{{- end }}
-        command:
-        - "python3"
-        - "-m"
-        - {{ include "element-io.synapse.process.app" (dict "root" $ "context" $processType) }}
-        - "-c"
-        - /conf/homeserver.yaml
-        env:
-          {{- include "element-io.synapse.pythonEnv" (dict "root" $ "context" .) | nindent 10 }}
-          {{- include "element-io.synapse.env" (dict "root" $ "context" .) | nindent 10 }}
-        ports:
-{{- if (include "element-io.synapse.process.hasHttp" (dict "root" $ "context" $processType)) }}
-        - containerPort: 8008
-          name: synapse-http
-          protocol: TCP
-{{- end }}
-{{- if (include "element-io.synapse.process.hasReplication" (dict "root" $ "context" $processType)) }}
-        - containerPort: 9093
-          name: synapse-repl
-          protocol: TCP
-{{- end }}
-        - containerPort: 8080
-          name: synapse-health
-          protocol: TCP
-        - containerPort: 9001
-          name: synapse-metrics
-          protocol: TCP
-        startupProbe:
-          httpGet:
-            path: /health
-            port: synapse-health
-          periodSeconds: 2
-          failureThreshold: 20
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: synapse-health
-          periodSeconds: 6
-          timeoutSeconds: 2
-          {{- /* For Synapse processes where there can only be 1 instance we're more generous with the threshold.
-                 This is because people can't scale the process up and so the impact of a restart is greater. */}}
-          failureThreshold: {{ ternary 8 3 (eq "isSingle" (include "element-io.synapse.process.isSingle" (dict "root" $ "context" $processType))) }}
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: synapse-health
-          periodSeconds: 2
-          timeoutSeconds: 2
-          successThreshold: 2
-          failureThreshold: {{ ternary 8 3 (eq "isSingle" (include "element-io.synapse.process.isSingle" (dict "root" $ "context" $processType))) }}
-{{- with .resources }}
-        resources:
-          {{- toYaml . | nindent 10 }}
-{{- end }}
-        volumeMounts:
-{{- range $secret := include "element-io.synapse.configSecrets" (dict "root" $ "context" .) | fromJsonArray }}
-        - mountPath: /secrets/{{ tpl $secret $ }}
-          name: "secret-{{ tpl $secret $ }}"
-          readOnly: true
-{{- end }}
-{{- range $appservice := .appservices }}
-        - name: {{ tpl $appservice.registrationFileConfigMap $ }}
-          mountPath: /as/{{ tpl $appservice.registrationFileConfigMap $ }}/registration.yaml
-          readOnly: true
-          subPath: registration.yaml
-{{- end }}
-        - mountPath: /conf/log_config.yaml
-          name: plain-config
-          subPath: log_config.yaml
-          readOnly: false
-        - mountPath: /conf
-          name: rendered-config
-          readOnly: false
-        - mountPath: /media
-          name: media
-          readOnly: false
-        - mountPath: /tmp
-          name: tmp
-          readOnly: false
-      volumes:
-      - configMap:
-          defaultMode: 420
-          name: "{{ $.Release.Name }}-synapse"
-        name: plain-config
-{{- range $secret := include "element-io.synapse.configSecrets" (dict "root" $ "context" .) | fromJsonArray }}
-      - secret:
-          secretName: {{ tpl $secret $ }}
-        name: secret-{{ tpl $secret $ }}
-{{- end }}
-      - emptyDir:
-          medium: Memory
-        name: "rendered-config"
-{{- range $appservice := .appservices }}
-      - configMap:
-          defaultMode: 420
-          name: "{{ tpl $appservice.registrationFileConfigMap $ }}"
-        name: {{ tpl $appservice.registrationFileConfigMap $ }}
-{{- end }}
-{{- if (include "element-io.synapse.process.responsibleForMedia" (dict "root" $ "context" (dict "processType" $processType "enabledWorkerTypes" (keys $enabledWorkers)))) }}
-      - persistentVolumeClaim:
-          claimName: {{ include "element-io.synapse.pvcName" (dict "root" $ "context" .) }}
-        name: "media"
-{{- else }}
-      - emptyDir:
-          medium: Memory
-        name: "media"
-{{- end }}
-      - emptyDir:
-          medium: Memory
-        name: "tmp"
+  {{- include "element-io.synapse.pod-template" (dict "root" $ "context" (merge $perProcessRoot (dict "isHook" false))) | nindent 2 }}
 ---
 {{- end }}
 {{- end }}
