--- a/charts/matrix-stack/templates/synapse/synapse_configmap.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_configmap.yaml
@@ -6,7 +6,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
-apiVersion: v1o
+apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
