--- a/charts/matrix-stack/templates/synapse/synapse_secret_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret_hook.yaml
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    {{- include "element-io.synapse-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-check-config-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ include "element-io.synapse.secret-name" (dict "root" $ "context" (dict "isHook" true)) }}
   namespace: {{ $.Release.Namespace }}
   annotations:
