--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount_hook.yaml
@@ -18,7 +18,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-check-config-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-check-config-hook")) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
