--- a/charts/matrix-stack/templates/synapse/synapse_configmap_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_configmap_hook.yaml
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.synapse-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse-check-config-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation
