--- a/charts/matrix-stack/templates/synapse/synapse_serviceaccount_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_serviceaccount_hook.yaml
@@ -7,23 +7,9 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with .Values.synapse -}}
 {{- if .enabled }}
 {{- with .checkConfigHook }}
-{{ if and .enabled .serviceAccount.create -}}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-
-  {{- with .serviceAccount.annotations }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-  labels:
-    {{- include "element-io.synapse-check-config-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "synapse-check-config-hook")) }}
-  namespace: {{ $.Release.Namespace }}
-automountServiceAccountToken: false
-{{- end }}
+{{ if and .enabled -}}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "synapse-check-config-hook" "extraAnnotations" (dict "helm.sh/hook" "pre-install,pre-upgrade"))) }}
 {{- end -}}
 {{- end -}}
 {{- end -}}
-
+{{- end -}}
