--- a/charts/matrix-stack/templates/init-secrets/role.yaml
+++ b/charts/matrix-stack/templates/init-secrets/role.yaml
@@ -14,6 +14,7 @@ metadata:
     {{- include "element-io.init-secrets.labels" (dict "root" $ "context" .) | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-10"
 rules:
 {{/*
   https://kubernetes.io/docs/reference/access-authn-authz/rbac/#referring-to-resources
