--- a/charts/matrix-stack/templates/init-secrets/rolebinding.yaml
+++ b/charts/matrix-stack/templates/init-secrets/rolebinding.yaml
@@ -15,6 +15,7 @@ metadata:
     {{- include "element-io.init-secrets.labels" (dict "root" $ "context" .) | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-10"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
