--- a/charts/matrix-stack/templates/synapse/synapse_configmap_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_configmap_hook.yaml
@@ -13,7 +13,7 @@ metadata:
     {{- include "element-io.synapse-check-config-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
-
+    "helm.sh/hook-weight": "-5"
   name: {{ include "element-io.synapse.configmap-name" (dict "root" $ "context" (dict "isHook" true)) }}
   namespace: {{ $.Release.Namespace }}
 {{- include "element-io.synapse.configmap-data"  (dict "root" $ "context" (dict "isHook" true)) -}}
