explict weights and explanations

--- a/charts/matrix-stack/templates/synapse/synapse_check_config_job_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_check_config_job_hook.yaml
@@ -16,7 +16,13 @@ metadata:
   namespace: {{ $.Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
-
+{{- /*
+Hook Weights are
+- -10 : The initSecret hook generating secrets used by the check config job
+- -5 : The synapse secret & configMap for the hook, so that they are created before the job
+- 0 : The job itself, so that it is run after the secrets and configs are created &
+*/}}
+    "helm.sh/hook-weight": "0"
 {{- with .checkConfigHook.annotations }}
     {{- toYaml . | nindent 4 }}
 {{- end }}
