--- a/REUSE.toml
+++ b/REUSE.toml
@@ -24,3 +24,8 @@ SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
 path = "newsfragments/*.md"
 SPDX-FileCopyrightText = "Copyright 2025 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
+
+[[annotations]]
+path = "docs/assets/images/*"
+SPDX-FileCopyrightText = "Copyright 2025 New Vector Ltd"
+SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
