--- a/charts/matrix-stack/ci/synapse-worker-example-values.yaml
+++ b/charts/matrix-stack/ci/synapse-worker-example-values.yaml
@@ -30,7 +30,7 @@ synapse:
       enabled: true
     event-persister:
       enabled: true
-      instances: 2
+      replicas: 2
     federation-reader:
       enabled: true
     federation-sender:
@@ -45,7 +45,7 @@ synapse:
       enabled: true
     pusher:
       enabled: true
-      instances: 2
+      replicas: 2
     receipts-account:
       enabled: true
     sliding-sync:
