Ensure all Secrets set their type

--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -13,6 +13,7 @@ metadata:
   namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 4 }}
+type: Opaque
 data:
 {{- with .additional }}
 {{- range $key := (. | keys | uniq | sortAlpha) }}
