--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -1,5 +1,5 @@
 {{- /*
-Copyright 2024 New Vector Ltd
+Copyright 2024-2025 New Vector Ltd
 
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
@@ -13,6 +13,7 @@ metadata:
     {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse
   namespace: {{ $.Release.Namespace }}
+type: Opaque
 data:
 {{- with .additional }}
 {{- range $key := (. | keys | uniq | sortAlpha) }}
