Ensure all ports have names

--- a/charts/matrix-stack/templates/synapse/redis_service.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_service.yaml
@@ -19,6 +19,7 @@ spec:
   ports:
   - port: 6379
     targetPort: redis
+    name: redis
   selector:
     app.kubernetes.io/instance: "{{ $.Release.Name }}-synapse-redis"
 {{- end }}
