--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -5,6 +5,7 @@
 # source_fragments: element-web-minimal.yaml element-web-pytest-extras.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+# initSecrets, postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   additional: |
     {
@@ -28,7 +29,7 @@ elementWeb:
     has-no-service-monitor: "true"
   ingress:
     host: element.{{ $.Values.serverName }}
-    tlsSecret: "{{ $.Release.Name }}-element-web-tls"
+    tlsSecret: '{{ $.Release.Name }}-element-web-tls'
   replicas: 1
 matrixAuthenticationService:
   enabled: false
