--- a/charts/matrix-stack/ci/synapse-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-secrets-externally-values.yaml
@@ -5,6 +5,7 @@
 # source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-test-postgres-secrets-externally.yaml synapse-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+# initSecrets, postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   enabled: false
 matrixAuthenticationService:
@@ -14,20 +15,20 @@ synapse:
   ingress:
     host: synapse.ess.localhost
   macaroon:
-    secret: "{{ $.Release.Name }}-synapse-external"
+    secret: '{{ $.Release.Name }}-synapse-external'
     secretKey: macaroon
   postgres:
     database: synapse
     host: ess-postgres
     password:
-      secret: "{{ $.Release.Name }}-synapse-external"
+      secret: '{{ $.Release.Name }}-synapse-external'
       secretKey: postgresPassword
     user: synapse_user
   registrationSharedSecret:
-    secret: "{{ $.Release.Name }}-synapse-external"
+    secret: '{{ $.Release.Name }}-synapse-external'
     secretKey: registrationSharedSecret
   signingKey:
-    secret: "{{ $.Release.Name }}-synapse-external"
+    secret: '{{ $.Release.Name }}-synapse-external'
     secretKey: signingKey
 wellKnownDelegation:
   enabled: false
