--- a/charts/matrix-stack/ci/element-web-minimal-values.yaml
+++ b/charts/matrix-stack/ci/element-web-minimal-values.yaml
@@ -5,6 +5,7 @@
 # source_fragments: element-web-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+# initSecrets, postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   ingress:
     host: element.ess.localhost
