--- a/charts/matrix-stack/ci/matrix-authentication-service-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-secrets-externally-values.yaml
@@ -5,11 +5,12 @@
 # source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-test-postgres.yaml matrix-authentication-service-test-postgres-secrets-externally.yaml matrix-authentication-service-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+# initSecrets, postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   enabled: false
 matrixAuthenticationService:
   encryptionSecret:
-    secret: "{{ $.Release.Name }}-mas-external"
+    secret: '{{ $.Release.Name }}-mas-external'
     secretKey: encryption
   ingress:
     host: mas.ess.localhost
@@ -17,27 +18,27 @@ matrixAuthenticationService:
     database: mas
     host: postgres
     password:
-      secret: "{{ $.Release.Name }}-mas-external"
+      secret: '{{ $.Release.Name }}-mas-external'
       secretKey: postgresPassword
     user: mas
   privateKeys:
     ecdsaPrime256v1:
-      secret: "{{ $.Release.Name }}-mas-external"
+      secret: '{{ $.Release.Name }}-mas-external'
       secretKey: keysEcdsaPrime256v1
     ecdsaSecp256k1:
-      secret: "{{ $.Release.Name }}-mas-external"
+      secret: '{{ $.Release.Name }}-mas-external'
       secretKey: keysEcdsaSecp256k1
     ecdsaSecp384r1:
-      secret: "{{ $.Release.Name }}-mas-external"
+      secret: '{{ $.Release.Name }}-mas-external'
       secretKey: keysEcdsaSecp384r1
     rsa:
-      secret: "{{ $.Release.Name }}-mas-external"
+      secret: '{{ $.Release.Name }}-mas-external'
       secretKey: keysRSA
   synapseOIDCClientSecret:
-    secret: "{{ $.Release.Name }}-mas-external"
+    secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseOIDC
   synapseSharedSecret:
-    secret: "{{ $.Release.Name }}-mas-external"
+    secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseShared
 synapse:
   enabled: false
