--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -5,6 +5,7 @@
 # source_fragments: synapse-minimal.yaml synapse-pytest-base-extras.yaml synapse-pytest-self-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+# postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   enabled: false
 initSecrets:
@@ -20,14 +21,14 @@ synapse:
         push:
           jitter_dalay: 10
     01-other-user-config.yaml:
-      configSecret: "{{ $.Release.Name }}-synapse-secrets"
-      configSecretKey: "01-other-user-config.yaml"
+      configSecret: '{{ $.Release.Name }}-synapse-secrets'
+      configSecretKey: 01-other-user-config.yaml
   extraEnv:
     - name: DEBUG_RENDERING
       value: "1"
   ingress:
     host: synapse.{{ $.Values.serverName }}
-    tlsSecret: "{{ $.Release.Name }}-synapse-web-tls"
+    tlsSecret: '{{ $.Release.Name }}-synapse-web-tls'
   redis:
     annotations:
       has-no-service-monitor: "true"
