--- a/charts/matrix-stack/ci/synapse-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/synapse-secrets-in-helm-values.yaml
@@ -5,6 +5,7 @@
 # source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-test-postgres-secrets-in-helm.yaml synapse-secrets-in-helm.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+# initSecrets, postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   enabled: false
 matrixAuthenticationService:
