synapse: add secret type

--- a/charts/matrix-stack/templates/synapse/synapse_secret_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret_hook.yaml
@@ -8,6 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- if and .enabled .checkConfigHook.enabled -}}
 apiVersion: v1
 kind: Secret
+type: Opaque
 metadata:
   labels:
     {{- include "element-io.synapse-check-config-hook.labels" (dict "root" $ "context" .) | nindent 4 }}
