--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -8,6 +8,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- if .enabled -}}
 apiVersion: v1
 kind: Secret
+type: Opaque
 metadata:
   labels:
     {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
