Run integration tests as a GID 0

--- a/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
@@ -14,6 +14,9 @@ elementWeb:
   annotations:
     has-no-service-monitor: "true"
 
+  podSecurityContext:
+    runAsGroup: 0
+
   additional: |
     {
       "default_server_config": {
