--- a/charts/matrix-stack/ci/fragments/synapse-pytest-base-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-pytest-base-extras.yaml
@@ -10,3 +10,17 @@ synapse:
   redis:
     annotations:
       has-no-service-monitor: "true"
+
+    podSecurityContext:
+      runAsGroup: 0
+
+  podSecurityContext:
+    runAsGroup: 0
+
+haproxy:
+  podSecurityContext:
+    runAsGroup: 0
+
+postgres:
+  podSecurityContext:
+    runAsGroup: 0
