--- a/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
@@ -13,3 +13,7 @@ wellKnownDelegation:
     tlsSecret: "{{ $.Release.Name }}-well-known-web-tls"
   baseDomainRedirect:
    url: "https://redirect.localhost/path"
+
+haproxy:
+  podSecurityContext:
+    runAsGroup: 0
