--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -30,6 +30,8 @@ elementWeb:
   ingress:
     host: element.{{ $.Values.serverName }}
     tlsSecret: '{{ $.Release.Name }}-element-web-tls'
+  podSecurityContext:
+    runAsGroup: 0
   replicas: 1
 matrixAuthenticationService:
   enabled: false
