--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -5,12 +5,16 @@
 # source_fragments: synapse-minimal.yaml synapse-pytest-base-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-# postgres don't have any required properties to be set and defaults to enabled
 elementWeb:
   enabled: false
+haproxy:
+  podSecurityContext:
+    runAsGroup: 0
 initSecrets:
   annotations:
     has-no-service-monitor: "true"
+  podSecurityContext:
+    runAsGroup: 0
 matrixAuthenticationService:
   additional:
     000-pytest-admin:
@@ -22,13 +26,22 @@ matrixAuthenticationService:
   ingress:
     host: mas.{{ $.Values.serverName }}
     tlsSecret: '{{ $.Release.Name }}-mas-web-tls'
+  podSecurityContext:
+    runAsGroup: 0
+postgres:
+  podSecurityContext:
+    runAsGroup: 0
 serverName: ess.localhost
 synapse:
   ingress:
     host: synapse.{{ $.Values.serverName }}
     tlsSecret: '{{ $.Release.Name }}-synapse-web-tls'
+  podSecurityContext:
+    runAsGroup: 0
   redis:
     annotations:
       has-no-service-monitor: "true"
+    podSecurityContext:
+      runAsGroup: 0
 wellKnownDelegation:
   enabled: false
