--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -10,6 +10,9 @@ elementWeb:
   enabled: false
 global:
   baseDomain: ess.localhost
+haproxy:
+  podSecurityContext:
+    runAsGroup: 0
 matrixAuthenticationService:
   enabled: false
 # To check that templating works against the ingress
