--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -282,6 +282,12 @@ elementWeb:
   labels: {}
   ## Defines the annotations to add to the workload
   # annotations: {}
+  ## Defines additional environment variables to be injected onto this workload
+  ## e.g.
+  ## extraEnv:
+  ## - name: FOO
+  ##   value: "bar"
+  extraEnv: []
   ## A subset of SecurityContext. ContainersSecurityContext holds pod-level security attributes and common container settings
   containersSecurityContext:
     ## Controls whether a process can gain more privileges than its parent process.
