synapse hook: mount postgres password if required

--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -36,7 +36,7 @@ spec:
     type: RollingUpdate
   # Without this CrashLoopBackoffs due to config failures block pod recreation
   podManagementPolicy: Parallel
-  {{- include "element-io.synapse.pod-template" (dict "root" $ "context" (merge $perProcessRoot (dict "isHook" false))) | nindent 2 }}
+  {{- include "element-io.synapse.pod-template" (dict "root" $ "context" $perProcessRoot) | nindent 2 }}
 ---
 {{- end }}
 {{- end }}
