--- a/charts/matrix-stack/templates/postgres/secret_hook.yaml
+++ b/charts/matrix-stack/templates/postgres/secret_hook.yaml
@@ -12,8 +12,11 @@ kind: Secret
 metadata:
   labels:
     {{- include "element-io.postgres.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.postgres.secret-name" (dict "root" $ "context"  (dict "isHook" false)) }}
+  name: {{ include "element-io.postgres.secret-name" (dict "root" $ "context"  (dict "isHook" true)) }}
   namespace: {{ $.Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
 {{- include "element-io.postgres.secret-data" (dict "root" $ "context" .) -}}
 {{- end -}}
 {{- end -}}
