--- a/charts/matrix-stack/templates/synapse/synapse_check_config_job_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_check_config_job_hook.yaml
@@ -35,6 +35,6 @@ spec:
   manualSelector: false
   parallelism: 1
   podReplacementPolicy: TerminatingOrFailed
-  {{- include "element-io.synapse.pod-template" (dict "root" $ "context" (merge $perProcessRoot (dict "isHook" true))) | nindent 2 }}
+  {{- include "element-io.synapse.pod-template" (dict "root" $ "context" $perProcessRoot) | nindent 2 }}
 {{- end }}
 {{- end }}
