--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -14,6 +14,6 @@ metadata:
     {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ include "element-io.synapse.secret-name" (dict "root" $ "context" (dict "isHook" false)) }}
   namespace: {{ $.Release.Namespace }}
-{{- include "element-io.synapse.secret-data"  (dict "root" $ "context" (merge (dict "isHook" false) .)) -}}
+{{- include "element-io.synapse.secret-data"  (dict "root" $ "context" .) -}}
 {{- end -}}
 {{- end -}}
