--- a/charts/matrix-stack/templates/synapse/synapse_secret_hook.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret_hook.yaml
@@ -17,6 +17,6 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-5"
-{{- include "element-io.synapse.secret-data"  (dict "root" $ "context" (merge (dict "isHook" true) (. | deepCopy))) -}}
+{{- include "element-io.synapse.secret-data"  (dict "root" $ "context" .) -}}
 {{- end -}}
 {{- end -}}
