element web: support multiple additional subproperties

--- a/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
@@ -17,21 +17,22 @@ elementWeb:
   podSecurityContext:
     runAsGroup: 0
 
-  additional: |
-    {
-      "default_server_config": {
-        "m.homeserver": {
-          "base_url": "https://synapse.{{ $.Values.serverName }}"
+  additional:
+    user-config.json: |
+      {
+        "default_server_config": {
+          "m.homeserver": {
+            "base_url": "https://synapse.{{ $.Values.serverName }}"
+          }
+        },
+        "element_call": {
+          "url": "https://call.{{ $.Values.serverName }}",
+          "use_exclusively": true
+        },
+        "features": {
+          "feature_video_rooms": true,
+          "feature_group_calls": true,
+          "feature_new_room_decoration_ui": true,
+          "feature_element_call_video_rooms": true
         }
-      },
-      "element_call": {
-        "url": "https://call.{{ $.Values.serverName }}",
-        "use_exclusively": true
-      },
-      "features": {
-        "feature_video_rooms": true,
-        "feature_group_calls": true,
-        "feature_new_room_decoration_ui": true,
-        "feature_element_call_video_rooms": true
       }
-    }
