--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -228,11 +228,12 @@ initSecrets:
 elementWeb:
   enabled: true
 
-  ## Arbitrary extra config to inject into Element Web's config.json a JSON string
+  ## Arbitrary extra config to inject into Element Web's config.json.
+  ## Each key under additional is an additional config to merge into Element Web's config.json.
   ##
   ## Full details on available configuration options can be found at https://github.com/element-hq/element-web/blob/develop/docs/config.md
   ## Most settings are configurable but some settings are owned by the chart and can't be overwritten
-  additional: "{}"
+  additional: {}
 
   # Number of Element Web replicas to start up
   replicas: 1
@@ -1273,7 +1274,7 @@ synapse:
   macaroon: {}
 
   ## Additional configuration to provide to all Synapse processes.
-  ## Each key under additional is an additioanal config to merge into synapse homeserver.yaml
+  ## Each key under additional is an additional config to merge into synapse homeserver.yaml
   ## Full details on available configuration options can be found at https://element-hq.github.io/synapse/latest/usage/configuration/config_documentation.html
   ## This can be provided in-line in the Helm Chart and/or via an existing Secret
   ## e.g.
