--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -29,7 +29,7 @@ data:
 {{- end }}
 {{- end }}
 {{- if $.Values.synapse.enabled }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseSharedSecret" "secretProperty" .synapseSharedSecret "initIfAbsent" true)) }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseSharedSecret" "initIfAbsent" true)) }}
 {{- with .synapseSharedSecret }}
 {{- with .value }}
   SYNAPSE_SHARED_SECRET: {{ . | b64enc }}
@@ -41,20 +41,20 @@ data:
 {{- end }}
 {{- end }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "secretProperty" .encryptionSecret "initIfAbsent" true)) }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "initIfAbsent" true)) }}
 {{- with .encryptionSecret }}
 {{- with .value }}
   ENCRYPTION_SECRET: {{ . | b64enc }}
 {{- end }}
 {{- end }}
 {{- with required "privateKeys is required for Matrix Authentication Service" .privateKeys }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.rsa" "secretProperty" .rsa "initIfAbsent" true)) }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.rsa" "initIfAbsent" true)) }}
 {{- with .rsa }}
 {{- with .value }}
   RSA_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaPrime256v1" "secretProperty" .ecdsaPrime256v1 "initIfAbsent" true)) }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaPrime256v1" "initIfAbsent" true)) }}
 {{- with .ecdsaPrime256v1 }}
 {{- with .value }}
   ECDSA_PRIME256V1_PRIVATE_KEY: {{ . | b64enc }}
