Update element-io.ess-library.check-credential to do validation on generatable credentials too

--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -24,6 +24,7 @@ data:
 {{- end }}
 {{- end }}
 {{- with .postgres.password }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.postgres.password" "initIfAbsent" false)) }}
 {{- with .value }}
   POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
@@ -35,6 +36,7 @@ data:
   SYNAPSE_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseOIDCClientSecret" "initIfAbsent" true)) }}
 {{- with .synapseOIDCClientSecret }}
 {{- with .value }}
   SYNAPSE_OIDC_CLIENT_SECRET: {{ . | b64enc }}
@@ -61,11 +63,13 @@ data:
 {{- end }}
 {{- end }}
 {{- with .ecdsaSecp256k1 }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp256k1" "initIfAbsent" false)) }}
 {{- with .value }}
   ECDSA_SECP256K1_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
 {{- with .ecdsaSecp384r1 }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp384r1" "initIfAbsent" false)) }}
 {{- with .value }}
   ECDSA_SECP384R1_PRIVATE_KEY: {{ . | b64enc}}
 {{- end }}
